--- a/styles.css
+++ b/styles.css
@@ -17,7 +17,13 @@ body {
   color: white;
   background-color: #7468F6;
 }
-
+.common-title{
+  font-family: 'Steppe-ExtraBold' ,  sans-serif;
+  font-size: 60px;
+  line-height: 100%;
+  display: flex;
+  justify-content: center;
+}
 .header {
   padding: 40px 0;
 }
@@ -108,4 +114,208 @@ body {
   top: 0;
   right: 0;
   z-index: -1;
+}
+.products{
+  padding: 0 100px;
+}
+.products-container {
+  max-width: 1200px;
+  margin: 0 auto;
+}
+.products-items{
+  display: grid;
+  grid-template-columns: repeat(3, 384px);
+  gap: 90px 24px;
+  margin-top: 110px;
+}
+.products-item{
+  background-color: white;
+  color: #5D3427;
+  padding: 24px;
+}
+.products-item-image{
+  height: 202px;
+  text-align: center;
+}
+.products-item-image img{
+  height: 272px;
+  top: -70px;
+  position: relative;
+  max-width: 100%;
+}
+.products-item-details{
+  padding: 24px;
+}
+.products-item-price{
+  color:#7468F6;
+  font-family: 'Steppe-ExtraBold' ,  sans-serif;
+  font-size: 24px;
+  margin-bottom: 10px;
+}
+.products-item-title{
+  font-size: 18px;
+  font-family: 'Steppe-ExtraBold' ,  sans-serif;
+  margin-bottom: 20px;
+  }
+.products-item-text{
+  height: 110px;
+  font-size: 14px;
+  line-height: 120%;
+  margin-bottom: 20px;
+}
+.products-item-extra{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.products-item-weight{
+  font-size: 12px;
+}
+.oder-form_text{
+  color: #FFFFFF;
+  padding: 24px;
+}
+
+.order-button {
+  background-color:#7468F6;
+  color: #fff;
+  padding: 18px 35px;
+  text-align: center;
+  border-radius: 60px;
+  cursor: pointer;
+  box-sizing: border-box;
+  border: none;
+  transition: background-color 0.3s ease;
+  font-size: 18px;
+}
+
+.order-button:hover {
+  background-color: rgb(123, 0, 255);
+}
+
+.products-love-items{
+  display: flex;
+  gap: 20px;
+  margin-top: 40px;
+}
+.products-love-item{
+  width: 590px;
+  height: 453px;
+}
+
+.products-love{
+  padding: 64px 0 150px 0;
+}
+.products-love-item-title{
+  font-family: 'Steppe-ExtraBold' ,  sans-serif;
+  line-height: 110%;
+  font-size: 24px;
+  margin-bottom: 20px;
+}
+.products-item-white{
+  background-color: #fff;
+  padding: 110px 70px;
+  box-sizing: border-box;
+  color: #5D3427;
+}
+.products-formit .products-order{
+  position: relative;
+}
+.products-order{
+  max-width: 1200px;
+  margin: 0 auto;
+ 
+}
+.products-formit{
+  padding: 64px 0 150px 0;
+}
+.formit {
+  display: flex;
+  gap: 10%;
+  color: #5D3427;
+  padding: 24px 0;
+  margin-top: 105px;
+  background-color: rgb(255 255 255 / 30%);
+  backdrop-filter: blur(50px);
+  display: flex;
+}
+.formit-action{
+  margin-left: 200px;
+  max-width: 367px;
+  padding: 40px 0 40px 0;
+  
+  
+
+}
+.main_images{
+  height: 272px;
+  top: -70px;
+  position: relative;
+  max-width: 100%;
+}
+::placeholder{
+  color: #FFFFFF;
+}
+.name-product{
+margin-right: 10px;
+}
+
+select, input[type="text"], input[type="tel"] {
+  width: 100%;
+  padding: 10px;
+  border: 1px solid white ;
+  margin-bottom: 16px;
+  border-radius: 60px;
+  border-color: #FFFFFF;
+  background-color: rgb(255 255 255 / 30%);
+  backdrop-filter: blur(50px);
+  color: #FFFFFF;
+}
+
+button[type="submit"] {
+  background-color: #7468F6;
+  color: #FFFFFF;
+  padding: 18px 35px;
+  text-align: center;
+  border-radius: 60px;
+  cursor: pointer;
+  box-sizing: border-box;
+  border: none;
+  transition: background-color 0.3s ease;
+  font-size: 18px;
+  width: 100%;
+}
+
+button[type="submit"]:hover {
+  background-color: #7468F6;
+}
+.main_images_oder{
+  width: 559px;
+  top: -58px;
+  position: relative;
+}
+.oder-form_text{
+  font-family: 'Steppe-ExtraBold' ,  sans-serif;
+  font-size: 18px;
+  line-height: 130%;
+}
+.breadcrumbs-bg{
+  position: absolute;
+  top: 0;
+  right: calc(100% - 810px);
+  z-index: -1;
+}
+.footer{
+  padding: 125px 0 50px;
+  text-align: center;
+}
+.footer-log{
+    width: 151;
+    height: 20px;
+    vertical-align: bottom;
+}
+.footer-text{
+  margin-top: 14px;
+  font-size: 18px;
+  line-height: 130%;
 }
